# doc_custom_extraction

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
annotate_and_display/: README.md  inference.py  pyproject.toml  ui.py
annotate_and_display/templates/: index.html
layoutlmv3_ft/: README.md  layoutlmv3_ft.py  pyproject.toml
